chrome/test/data/nacl/bad/ppapi_bad_magic.nmf
{
  "program": {
    "x86-32": {"url": "ppapi_bad.html"},
    "x86-64": {"url": "ppapi_bad.html"},
    "arm": {"url": "ppapi_bad.html"},
    "mips32": {"url": "ppapi_bad.html"}
  }
}
